[package]
name = "abcd"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
backtrace = "0.3.26"
base64 = "0.10.1"

[dependencies.bs58]
version = "0.2.2"
default-features = false
[dependencies.chrono]
version = "0.4.6"
default-features = false
features = ["serde"]
[dependencies.diesel]
version = "1.4.2"
features = ["postgres", "uuid"]
[dependencies.futures-preview]
version = "0.3.0-alpha.16"
default-features = false
[dependencies.http]
version = "0.1.17"
default-features = false
[dependencies.http-service]
version = "0.2.0"
default-features = false
[dependencies.mime]
version = "0.3.13"
default-features = false
[dependencies.oxide-auth]
version = "0.4.2"
default-features = false
[dependencies.runtime]
version = "0.3.0-alpha.4"
default-features = false
[dependencies.runtime-tokio]
version = "0.3.0-alpha.4"
default-features = false
[dependencies.serde]
version = "1.0.91"
default-features = false
features = ["derive"]
[dependencies.serde_json]
version = "1.0.39"
default-features = false
[dependencies.serde_urlencoded]
version = "0.5.5"
default-features = false
[dependencies.slog]
version = "2.4.1"
default-features = false
features = ["max_level_debug", "release_max_level_info"]
[dependencies.slog-async]
version = "2.3.0"
default-features = false
[dependencies.slog-bunyan]
version = "2.1.0"
default-features = false
[dependencies.slog-scope]
version = "4.1.1"
default-features = false
[dependencies.slog-stdlog]
version = "3.0.2"
default-features = false
[dependencies.tide]
git = "https://github.com/Nemo157/tide"
branch = "slog-per-request-logger"
default-features = false
[dependencies.tide-slog]
git = "https://github.com/Nemo157/tide"
branch = "slog-per-request-logger"
default-features = false
features = ["slog-scope"]
[dependencies.uuid]
version = "0.6.5"
default-features = false
features = ["v4"]

[patch.crates-io.http-service]
git = "https://github.com/rustasync/http-service"
branch = "master"
[patch.crates-io.http-service-hyper]
git = "https://github.com/rustasync/http-service"
branch = "master"
[patch.crates-io.http-service-mock]
git = "https://github.com/rustasync/http-service"
branch = "master"
